<resources>
    <string name="app_name">Keep in Shape</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_exercicio_register">ExercicioRegister</string>
    <string name="title_activity_exercicio_list">ExercicioList</string>
    <string name="title_activity_treino_register">TreinoRegister</string>
    <string name="title_activity_treino_list">TreinoList</string>
    <string name="title_activity_pessoa_register">PessoaRegister</string>
    <string name="title_activity_pessoa_list">PessoaList</string>
    <string name="title_activity_dieta_register">DietaRegister</string>
    <string name="title_activity_dieta_list">DietaList</string>
    <string name="title_activity_alimento_register">AlimentoRegister</string>
    <string name="title_activity_alimento_list">AlimentoList</string>
    <string name="title_activity_agenda_register">AgendaRegister</string>
    <string name="title_activity_agenda_list">AgendaList</string>

    <string name="registro_treino">Registro Exercício</string>
    <string name="nome_exercicio">Nome Exercício:</string>
    <string name="exercicio_tempo">Tempo:</string>
    <string name="exercicio_peso">Peso:</string>
    <string name="exercicio_quantidade">Quantidade:</string>
    <string name="exercicio_pontuacao">Pontuação:</string>
    <string name="btn_salvar">Salvar</string>
    <string name="nome_treino">Treino:</string>
    <string name="tipo_treino">Tipo de Treino:</string>
    <string name="dia_semana">Semana:</string>
    <string name="pontos_total">Pontos total:</string>
    <string name="pontos_maximo">Pontos máximo:</string>
    <string name="lista_exercicio">Lista de exercícios:</string>
    <string name="exercicio_cadastrados">Exercício cadastrado:</string>
    <string name="btn_add_treino">Adicionar</string>
    <string name="btn_add_Treino">Salvar</string>
    <string name="treinos_cadastrados">Treinos Cadastrados</string>
    <string name="title_activity_treino_list_specification">TreinoListSpecification</string>
    <string name="title_activity_treino_specification">TreinoSpecification</string>
    <string name="title_activity_exercicio_specification">ExercicioSpecification</string>
    <string name="title_activity_avaliacao_fisica">AvaliacaoFisica</string>
    <string name="title_activity_avaliacao_fisica_register">AvaliacaoFisicaRegister</string>
    <string name="title_activity_avaliacao_fisica_list">AvaliacaoFisicaList</string>
    <string name="title_activity_avaliacao_fisica_specification">AvaliacaoFisicaSpecification
    </string>


</resources>
